--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h3 id="gotopubs" style="margin-top:0.5em;margin-bottom:0.5em;">publications</h3>
             <ul class="pubs">
 	    	<li>
-                    <a href="https://arxiv.org/abs/2406.19276" target="_blank">VERISCORE: Evaluating the factuality of verifiable claims in long-form text generation</a><br>
+                    <a href="https://aclanthology.org/2024.findings-emnlp.552.pdf" target="_blank">VERISCORE: Evaluating the factuality of verifiable claims in long-form text generation</a><br>
                     <b>Yixiao Song</b>, Yekyung Kim, and Mohit Iyyer.<br>
                     <i>Findings of EMNLP 2024</i><br>
                     <h2><a href="javascript:unhide('veriscore');" class="bibtex">bibtex</a></h2>
