--- a/index.html
+++ b/index.html
@@ -52,6 +52,25 @@
             <h3 id="gotopubs" style="margin-top:0.5em;margin-bottom:0.5em;">publications</h3>
             <ul class="pubs">
 	    	<li>
+                    <a href="https://arxiv.org/abs/2502.17797" target="_blank">Enhancing human evaluation in machine translation with comparative judgment</a><br>
+                    <b>Yixiao Song</b>, Parker Riley, Daniel Deutsch and Mohit Iyyer.<br>
+                    <i>arXiv</i><br>
+                    <h2><a href="javascript:unhide('mt_human_eval');" class="bibtex">bibtex</a></h2>
+                    <div id="mt_human_eval" class="hidden">
+                        <pre>
+@misc{song2025enhancinghumanevaluationmachine,
+      title={Enhancing Human Evaluation in Machine Translation with Comparative Judgment}, 
+      author={Yixiao Song and Parker Riley and Daniel Deutsch and Markus Freitag},
+      year={2025},
+      eprint={2502.17797},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2502.17797}, 
+}
+                    </pre>
+                    </div>
+                </li>
+	    	<li>
                     <a href="https://aclanthology.org/2024.findings-emnlp.552.pdf" target="_blank">VERISCORE: Evaluating the factuality of verifiable claims in long-form text generation</a><br>
                     <b>Yixiao Song</b>, Yekyung Kim, and Mohit Iyyer.<br>
                     <i>Findings of EMNLP 2024</i><br>
