--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <ul class="pubs">
 	    	<li>
                     <a href="https://arxiv.org/abs/2502.17797" target="_blank">Enhancing human evaluation in machine translation with comparative judgment</a><br>
-                    <b>Yixiao Song</b>, Parker Riley, Daniel Deutsch and Mohit Iyyer.<br>
+                    <b>Yixiao Song</b>, Parker Riley, Daniel Deutsch and Markus Freitag.<br>
                     <i>arXiv</i><br>
                     <h2><a href="javascript:unhide('mt_human_eval');" class="bibtex">bibtex</a></h2>
                     <div id="mt_human_eval" class="hidden">
