--- a/index.html
+++ b/index.html
@@ -51,6 +51,25 @@
         <div class="posts-wrapper" style="clear:both">
             <h3 id="gotopubs" style="margin-top:0.5em;margin-bottom:0.5em;">publications</h3>
             <ul class="pubs">
+		<li>
+                    <a href="https://arxiv.org/abs/2502.17797" target="_blank">BEARCUBS: A benchmark for computer-using web agents</a><br>
+                    <b>Yixiao Song</b>, Katherine Thai, Chau Minh Pham, Yapei Chang, Mazin Nadaf, Mohit Iyyer.<br>
+                    <i>arXiv</i><br>
+                    <h2><a href="javascript:unhide('mt_human_eval');" class="bibtex">bibtex</a></h2>
+                    <div id="mt_human_eval" class="hidden">
+                        <pre>
+@misc{song2025enhancinghumanevaluationmachine,
+      title={Enhancing Human Evaluation in Machine Translation with Comparative Judgment}, 
+      author={Yixiao Song and Parker Riley and Daniel Deutsch and Markus Freitag},
+      year={2025},
+      eprint={2502.17797},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2502.17797}, 
+}
+                    </pre>
+                    </div>
+                </li>
 	    	<li>
                     <a href="https://arxiv.org/abs/2502.17797" target="_blank">Enhancing human evaluation in machine translation with comparative judgment</a><br>
                     <b>Yixiao Song</b>, Parker Riley, Daniel Deutsch and Markus Freitag.<br>
