--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
             <h3 id="gotopubs" style="margin-top:0.5em;margin-bottom:0.5em;">publications</h3>
             <ul class="pubs">
 		<li>
-                    <a href="https://arxiv.org/abs/2502.17797" target="_blank">BEARCUBS: A benchmark for computer-using web agents</a><br>
+                    <a href="https://arxiv.org/abs/2503.07919" target="_blank">BEARCUBS: A benchmark for computer-using web agents</a><br>
                     <b>Yixiao Song</b>, Katherine Thai, Chau Minh Pham, Yapei Chang, Mazin Nadaf, Mohit Iyyer.<br>
                     <i>arXiv</i><br>
                     <h2><a href="javascript:unhide('mt_human_eval');" class="bibtex">bibtex</a></h2>
                     <div id="mt_human_eval" class="hidden">
                         <pre>
-@misc{song2025enhancinghumanevaluationmachine,
-      title={Enhancing Human Evaluation in Machine Translation with Comparative Judgment}, 
-      author={Yixiao Song and Parker Riley and Daniel Deutsch and Markus Freitag},
+@misc{song2025bearcubsbenchmarkcomputerusingweb,
+      title={BEARCUBS: A benchmark for computer-using web agents}, 
+      author={Yixiao Song and Katherine Thai and Chau Minh Pham and Yapei Chang and Mazin Nadaf and Mohit Iyyer},
       year={2025},
-      eprint={2502.17797},
+      eprint={2503.07919},
       archivePrefix={arXiv},
-      primaryClass={cs.CL},
-      url={https://arxiv.org/abs/2502.17797}, 
+      primaryClass={cs.AI},
+      url={https://arxiv.org/abs/2503.07919}, 
 }
                     </pre>
                     </div>
