--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                     <a href="https://arxiv.org/abs/2503.07919" target="_blank">BEARCUBS: A benchmark for computer-using web agents</a><br>
                     <b>Yixiao Song</b>, Katherine Thai, Chau Minh Pham, Yapei Chang, Mazin Nadaf, Mohit Iyyer.<br>
                     <i>arXiv</i><br>
-                    <h2><a href="javascript:unhide('mt_human_eval');" class="bibtex">bibtex</a></h2>
-                    <div id="mt_human_eval" class="hidden">
+                    <h2><a href="javascript:unhide('bearcubs');" class="bibtex">bibtex</a></h2>
+                    <div id="bearcubs" class="hidden">
                         <pre>
 @misc{song2025bearcubsbenchmarkcomputerusingweb,
       title={BEARCUBS: A benchmark for computer-using web agents}, 
