--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 		<li>
                     <a href="https://arxiv.org/abs/2503.07919" target="_blank">BEARCUBS: A benchmark for computer-using web agents</a><br>
                     <b>Yixiao Song</b>, Katherine Thai, Chau Minh Pham, Yapei Chang, Mazin Nadaf, Mohit Iyyer.<br>
+		    Project Website: https://bear-cubs.github.io/<br>
                     <i>arXiv</i><br>
                     <h2><a href="javascript:unhide('bearcubs');" class="bibtex">bibtex</a></h2>
                     <div id="bearcubs" class="hidden">
@@ -73,6 +74,7 @@
 	    	<li>
                     <a href="https://arxiv.org/abs/2502.17797" target="_blank">Enhancing human evaluation in machine translation with comparative judgment</a><br>
                     <b>Yixiao Song</b>, Parker Riley, Daniel Deutsch and Markus Freitag.<br>
+		    
                     <i>arXiv</i><br>
                     <h2><a href="javascript:unhide('mt_human_eval');" class="bibtex">bibtex</a></h2>
                     <div id="mt_human_eval" class="hidden">
