--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<li>
                     <a href="https://arxiv.org/abs/2503.07919" target="_blank">BEARCUBS: A benchmark for computer-using web agents</a><br>
                     <b>Yixiao Song</b>, Katherine Thai, Chau Minh Pham, Yapei Chang, Mazin Nadaf, Mohit Iyyer.<br>
-		    Project Website: <code>https://bear-cubs.github.io/</code><br>
+		    Project Website: <a href="https://bear-cubs.github.io/" target="_blank">https://bear-cubs.github.io/</a><br>
                     <i>arXiv</i><br>
                     <h2><a href="javascript:unhide('bearcubs');" class="bibtex">bibtex</a></h2>
                     <div id="bearcubs" class="hidden">
