--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ Title={KNN-LM Does Not Improve Open-ended Text Generation
 
                 <li>
                     <a href="https://aclanthology.org/2023.acl-long.181.pdf" target="_blank">A Critical Evaluation of Evaluations for Long-form Question Answering</a><br>
-                    Fangyuan Xu*, <b>Yixiao Song*</b>, Mohit Iyyer, and Eunsol Choi.<br>
+                    <b>Yixiao Song*</b>, Fangyuan Xu*, Mohit Iyyer, and Eunsol Choi.<br>
 		    *Equal contribution<br>
                     <i>ACL 2023</i><br>
                     <h2><a href="https://github.com/carriex/lfqa_eval" target="_blank">code</a> // <a href="javascript:unhide('acl2023');" class="bibtex">bibtex</a></h2>
