--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <a href="https://arxiv.org/abs/2503.07919" target="_blank">BEARCUBS: A benchmark for computer-using web agents</a><br>
                     <b>Yixiao Song</b>, Katherine Thai, Chau Minh Pham, Yapei Chang, Mazin Nadaf, Mohit Iyyer.<br>
 		    Project Website: <a href="https://bear-cubs.github.io/" target="_blank">https://bear-cubs.github.io/</a><br>
-                    <i>arXiv</i><br>
+                    <i>COLM 2025</i><br>
                     <h2><a href="javascript:unhide('bearcubs');" class="bibtex">bibtex</a></h2>
                     <div id="bearcubs" class="hidden">
                         <pre>
