Revise bio and add publication for 2025
Updated personal information and added new publication details.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                 <br>
 
-                <p>I am a PhD student in computer science at <a href="https://www.umass.edu/linguistics">UMass Amherst</a> and a member of <a href="https://nlp.cs.umass.edu">UMass NLP Lab</a>. I'm advised by <a href="https://people.cs.umass.edu/~miyyer/">Prof. Mohit Iyyer</a> and <a href="https://people.umass.edu/bhatt/">Prof. Rajesh Bhatt</a>. I completed my master's degree in linguistics at <a href="https://www.ling.uni-konstanz.de">University of Konstanz</a>, advised by <a href="https://ling.sprachwiss.uni-konstanz.de/pages/home/romero/">Prof. Maribel Romero</a>. My research interests lie in human and automatic evaluation in the field of natural language processing. <br> <i>Current projects</i>: AI agent evaluation, factuality evaluation, and human evaluation with fine-grained error span annotation. <br>
+                <p>I completed my PhD in 2025 in Computer Science at UMass Amherst advised by Prof. <a href="https://people.cs.umass.edu/~miyyer/">Prof. Mohit Iyyer</a> and Prof. <a href="https://people.umass.edu/bhatt/">Prof. Rajesh Bhatt</a> in the <a href="https://nlp.cs.umass.edu">UMass NLP Lab</a>. I completed my master's degree in linguistics at <a href="https://www.ling.uni-konstanz.de">University of Konstanz</a>, advised by <a href="https://ling.sprachwiss.uni-konstanz.de/pages/home/romero/">Prof. Maribel Romero</a>. My research interests lie in human and automatic evaluation in the field of natural language processing. <br>
                 </p>
             </div>
         </div>
@@ -51,6 +51,27 @@
         <div class="posts-wrapper" style="clear:both">
             <h3 id="gotopubs" style="margin-top:0.5em;margin-bottom:0.5em;">publications</h3>
             <ul class="pubs">
+		<li>
+                    <a href="https://arxiv.org/abs/2505.20276" target="_blank">Does quantization affect models' performance on long-context tasks?</a><br>
+                    Anmol Mekala, Anirudh Atmakuru, <b>Yixiao Song</b>, Marzena Karpinska, Mohit Iyyer.<br>
+                    <i>EMNLP 2025</i><br>
+                    <h2><a href="javascript:unhide('bearcubs');" class="bibtex">bibtex</a></h2>
+                    <div id="quant" class="hidden">
+                        <pre>
+@misc{mekala2025doesquantizationaffectmodels,
+      title={Does quantization affect models' performance on long-context tasks?}, 
+      author={Anmol Mekala and Anirudh Atmakuru and Yixiao Song and Marzena Karpinska and Mohit Iyyer},
+      year={2025},
+      eprint={2505.20276},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2505.20276}, 
+}, 
+}
+                    </pre>
+                    </div>
+                </li>
+				
 		<li>
                     <a href="https://arxiv.org/abs/2503.07919" target="_blank">BEARCUBS: A benchmark for computer-using web agents</a><br>
                     <b>Yixiao Song</b>, Katherine Thai, Chau Minh Pham, Yapei Chang, Mazin Nadaf, Mohit Iyyer.<br>
