--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <a href="https://arxiv.org/abs/2505.20276" target="_blank">Does quantization affect models' performance on long-context tasks?</a><br>
                     Anmol Mekala, Anirudh Atmakuru, <b>Yixiao Song</b>, Marzena Karpinska, Mohit Iyyer.<br>
                     <i>EMNLP 2025</i><br>
-                    <h2><a href="javascript:unhide('bearcubs');" class="bibtex">bibtex</a></h2>
+                    <h2><a href="javascript:unhide('quant');" class="bibtex">bibtex</a></h2>
                     <div id="quant" class="hidden">
                         <pre>
 @misc{mekala2025doesquantizationaffectmodels,
