--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                 <br>
 
-                <p>I completed my PhD in 2025 in Computer Science at UMass Amherst advised by Prof. <a href="https://people.cs.umass.edu/~miyyer/">Prof. Mohit Iyyer</a> and Prof. <a href="https://people.umass.edu/bhatt/">Prof. Rajesh Bhatt</a> in the <a href="https://nlp.cs.umass.edu">UMass NLP Lab</a>. I completed my master's degree in linguistics at <a href="https://www.ling.uni-konstanz.de">University of Konstanz</a>, advised by <a href="https://ling.sprachwiss.uni-konstanz.de/pages/home/romero/">Prof. Maribel Romero</a>. My research interests lie in human and automatic evaluation in the field of natural language processing. <br>
+                <p>I completed my PhD in 2025 in Computer Science at UMass Amherst advised by <a href="https://people.cs.umass.edu/~miyyer/">Prof. Mohit Iyyer</a> and <a href="https://people.umass.edu/bhatt/">Prof. Rajesh Bhatt</a> in the <a href="https://nlp.cs.umass.edu">UMass NLP Lab</a>. I completed my master's degree in linguistics at <a href="https://www.ling.uni-konstanz.de">University of Konstanz</a>, advised by <a href="https://ling.sprachwiss.uni-konstanz.de/pages/home/romero/">Prof. Maribel Romero</a>. My research interests lie in human and automatic evaluation in the field of natural language processing. <br>
                 </p>
             </div>
         </div>
