--- a/index.html
+++ b/index.html
@@ -113,20 +113,31 @@
                     </div>
                 </li>
 		<li>
-                    <a href="https://arxiv.org/abs/2407.11930" target="_blank">Fine-grained Hallucination Detection and Mitigation in Long-form Question Answering</a><br>
+                    <a href="https://aclanthology.org/2025.findings-acl.1049.pdf" target="_blank">Localizing and Mitigating Errors in Long-form Question Answering</a><br>
                     Rachneet Sachdeva, <b>Yixiao Song</b>, Mohit Iyyer, Iryna Gurevych.<br>
                     <i>Findings of ACL 2025</i><br>
                     <h2><a href="javascript:unhide('halluquest');" class="bibtex">bibtex</a></h2>
                     <div id="halluquest" class="hidden">
                         <pre>
-@misc{sachdeva2024finegrainedhallucinationdetectionmitigation,
-      title={Fine-grained Hallucination Detection and Mitigation in Long-form Question Answering}, 
-      author={Rachneet Sachdeva and Yixiao Song and Mohit Iyyer and Iryna Gurevych},
-      year={2024},
-      eprint={2407.11930},
-      archivePrefix={arXiv},
-      primaryClass={cs.CL},
-      url={https://arxiv.org/abs/2407.11930}, 
+@inproceedings{sachdeva-etal-2025-localizing,
+    title = "Localizing and Mitigating Errors in Long-form Question Answering",
+    author = "Sachdeva, Rachneet Singh  and
+      Song, Yixiao  and
+      Iyyer, Mohit  and
+      Gurevych, Iryna",
+    editor = "Che, Wanxiang  and
+      Nabende, Joyce  and
+      Shutova, Ekaterina  and
+      Pilehvar, Mohammad Taher",
+    booktitle = "Findings of the Association for Computational Linguistics: ACL 2025",
+    month = jul,
+    year = "2025",
+    address = "Vienna, Austria",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2025.findings-acl.1049/",
+    doi = "10.18653/v1/2025.findings-acl.1049",
+    pages = "20437--20469",
+    ISBN = "979-8-89176-256-5",
 }
                     </pre>
                     </div>
